V 
* features
- 
* bug fixes
- 

V 3.3.17
* features
- 
* bug fixes
- fix governor script execution

V 3.3.16
* features
- jelly beans fixes
- cache profile change scripts
- service switch optimisations
* bug fixes
- 

V 3.3.15
* features
- French and Spanish translation updates
* bug fixes
-
 
V 3.3.14
* features
- Croatian translation (Thanks to D.Vidic)
- French translation rework (Thanks to Michael)
* bug fixes
- 

V  3.3.13
* features
- Spanish translation (Thanks to Rubén)
- Korean translation (Thanks to 시즈카)
- Jelly Bean optimisations
- moved translation to http://www.getlocalization.com/cputuner/
- minor translation updates
* bug fixes
- fix crashes

V 3.4.0
* features
- disable min/max frequencies for beginners
- make virtual governors mandatory
- disable GPS switching (as system app)
- let only power users switch off CPUs and warn them
* bug fixes
- 

V  3.3.13
* features
- Spanish translation (Thanks to Rubén)
- Korean translation (Thanks to 시즈카)
- Jelly Bean optimisations
- moved translation to http://www.getlocalization.com/cputuner/
- minor translation updates
* bug fixes
- fix crashes

V 3.3.12
* features
- write directly to sysfs files is now a option
* bug fixes
- fix crashes introduced with version 3.3.11

V 3.3.11
* features
- Fix for Jelly Bean
* bug fixes
-

V 3.3.10
* features
- limit switch interval
* bug fixes
- fix min/max frequency spinners not updating
- fix governor editor for small screens

V 3.3.9
* features
- 
* bug fixes
- fix save in autoload config
- fix rare crashes

V 3.3.8
* features
- ISC optimisations
* bug fixes
- fix rare crashes

V 3.3.7
* features
- English translation ;) (Thanks to Michael)
* bug fixes
- fix memory leak
- virtgov editor saves number of cpus
- rare crashes

V 3.3.6
* features
- Russian translation (Thanks to Kotdis)
* bug fixes
- minor fixes

V 3.3.5
* features
- foreground/background profile switches are configurable (default: background)
- option to hide widget labels
* bug fixes