@@ -4,6 +4,12 @@ V
 * bug fixes
 - 
 
+V 
+* features
+- Use interactive governor on Android 4.0 and later
+* bug fixes
+- 
+
 V 3.3.17
 * features
 - 
